[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/fade_transition/fade_transition.gd" type="Script" id=1]
[ext_resource path="res://resources/animations/gui/fade_transition/fade_in.tres" type="Animation" id=2]
[ext_resource path="res://resources/animations/gui/fade_transition/fade_out.tres" type="Animation" id=3]

[node name="FadeTransition" type="ColorRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 640, 360 )
color = Color( 0.0509804, 0.027451, 0.0352941, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/fade_in = ExtResource( 2 )
anims/fade_out = ExtResource( 3 )

[connection signal="faded_in" from="." to="." method="_on_faded_in"]
[connection signal="faded_out" from="." to="." method="_on_faded_out"]
